@@ -1,3 +1,8 @@
+2004-09-14  Thomas Schilling <tjs_ng@yahoo.de>
+
+	* swank-allegro.lisp (inspect-for-emacs): Update for new
+	inspect-for-emacs protocol.
+
 2004-09-14  Marco Baringer  <mb@bese.it>
 
 	* swank-backend.lisp (inspector, make-default-inspector): Add an
